--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "postinstall": "./bin/post-install-banner"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,5 @@
   "devDependencies": {
     "@types/node": "^20.12.12",
     "typescript": "^5.4.5"
-  },
-  "dependencies": {
   }
 }
